@@ -4,7 +4,10 @@
 
 TBD
 
+### Added
+
 - `error_function()` - Gauss error function
+- `chi_squared_dist_table()` - A table of χ2 values vs p-values 
 
 ## 0.2.5
 
